Add jwt refreshToken logic, logout session and change /api/v1 routes
